# rust-eda

./: .prettierignore  .prettierrc  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts  vitest.config.ts
docs/: 01-project-overview.md  02-development-roadmap.md  03-technical-architecture.md
docs/appendix/: risk-management.md  tech-stack.md
docs/phases/: phase-1-foundation.md  phase-2-schematic.md  phase-3-pcb.md  phase-4-simulation.md  phase-5-ecosystem.md
src/: App.vue  main.ts  test-setup.ts
src-tauri/: Cargo.toml  fix_all_graphics.py  fix_graphics.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  file.rs  library.rs  mod.rs  project.rs  schematic.rs
src-tauri/src/models/: annotation.rs  component.rs  footprint.rs  mod.rs  netlist.rs  project.rs  schematic.rs  wire.rs
src-tauri/src/services/: erc_service.rs  export_service.rs  extended_components.rs  extended_components.rs.bak  file_service.rs  integrated_circuits.rs  integrated_circuits.rs.bak  library_service.rs  logic_gates.rs  logic_gates.rs.bak  logic_gates_impl.rs  mod.rs  project_service.rs  sensors_power.rs  sensors_power.rs.bak  symbol_helper.rs
src-tauri/src/utils/: error.rs  mod.rs  validators.rs
src/api/: export.ts  file.ts  index.ts  library.ts  project.ts  schematic.ts
src/components/: PropertyPanel.vue
src/composables/: useAutoSave.ts  useCanvas.ts  useComponentCache.ts  useHistory.ts  useSchematicEditor.ts  (+2 more)
(+49 files in other folders)
